# networking-copilot

./: .gitignore  Justfile  LICENSE  README.md  pyproject.toml
data/: _profiles.txt
src/networking_copilot/: chat.py  db.py  ingest.py  llm.py  main.py  retrieve.py  utils.py
src/networking_copilot/chat_loaders/: instagram.py
